[package]
authors = ["Elliott Linder <elliott@linder.bz>"]
name = "mucs"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[[bin]]
doc = false
name = "mu-cs"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[dependencies]
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
muonline-packet = { path = "../Packet/muonline-packet" }
muonline-packet_codec = { path = "../Packet/muonline-packet_codec" }
muonline-protocol = { path = "../Protocol" }
evmap = "4.0"
futures = "0.1"
protobuf = "2"
failure = "0.1"
try_from = "0.2"
tokio = "0.1"
index-pool = "1.0"

[dependencies.structopt]
version = "0.2"
optional = true

[features]
build-binary = ["structopt"]

[build-dependencies]
protoc-grpcio = "0.2"
