[package]
authors = ["Elliott Linder <elliott@linder.bz>"]
name = "mucs"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[profile.release]
lto = "thin"

[[bin]]
doc = false
name = "mu-cs"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[dependencies]
ctrlc = { version = "3.1", optional = true }
evmap = "4.0"
failure = "0.1"
futures = "0.1"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
humantime = "1.1"
index-pool = "1.0"
muonline-packet = { path = "../Packet", features = ["codec"] }
muonline-protocol = { path = "../Protocol" }
parking_lot = "0.6"
protobuf = "2"
structopt = { version = "0.2", optional = true }
tap = "0.3"
tokio = "0.1"
try_from = "0.2"

[features]
build-binary = ["ctrlc", "structopt"]

[build-dependencies]
protoc-grpcio = "0.2"
